testsuite/vhdl/parser_rules/test_data/expression_failure/expression_failure_002.expected
in file expression_failure/expression_failure_002.input, line 2:
parse error: Test Suite Full Match Error! Unparsed input left!
-5 mod -3
   ^
